# first-OpenGL

./: .gitignore  README.md
Chapter1/: CMakeLists.txt  Shader.cpp  lesson2.cpp  lesson_texture.cpp  main.cpp  training1.cpp
Chapter1/load_shaders/: Shader.h
Chapter1/shaders/: shader.fs  shader.vs
Chapter1/src/: glad.c
